app/assets/styles/modules/_headline.css
.headline {
    font-weight:300;
    font-size: 1.9rem;
    color: $mainBlue;

    @mixin atSmall {
        font-size:2.875rem;
    }

    &--centered {
        text-align: center;
    }

    &--orange {
        color: $mainOrange;
    }

    &--small {
        font-size: 1.2rem;

        @mixin atSmall {
            font-size: 1.875rem;
        }
    }

    &--narrow {
        max-width: 500px;
        margin-left: auto;
        margin-right: auto;
    }

    &--light {
        font-weight:100;
    }

    &--b-margin-small {
        margin-bottom: .5em;
    }

    &--b-margin-large {
        margin-bottom: 1.5em;
    }

    &--headline--no-t-margin {
        margin-top: 0;
    }
}

